# moFixDemo

./: .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  gradio_app.py  install.sh  main.py  ms_pyproject.toml  pyproject.toml  pyrightconfig.json
scripts/: translate_args.py
src/: arg_reflector.py  main.py  translations_zh.json
tests/: test_main.py
