[project]
name = "mofixdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.12.0",
    "hf-gradio>=0.3.2",
    "liuren-modeling",
    "modelscope>=1.35.4",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.uv.workspace]
members = [
    "msmodeling",
]

[tool.uv.sources]
liuren-modeling = { workspace = true }
