[project]
name = "mofixdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.12.0",
    "hf-gradio>=0.3.2",
    "liuren-modeling",
    "modelscope>=1.35.4",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.uv.workspace]
members = [
    "msmodeling",
]

[tool.uv.sources]
liuren-modeling = { workspace = true }

[dependency-groups]
dev = [
    "autoflake>=2.3.3",
    "basedpyright>=1.39.0",
    "isort>=8.0.1",
    "mdformat>=1.0.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "radon>=6.0.1",
    "ruff>=0.15.10",
    "vulture>=2.16",
]
